--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-# default environmet values used by ESGF/Docker
+# default environment values used by ESGF/Docker
 ESGF_HOSTNAME=my-node.esgf.org
 ESGF_CONFIG=~/esgf_config
+ESGF_DATA_DIR=/tmp
+ESGF_VERSION=1.0
