--- a/docker-compose-data-node.yml
+++ b/docker-compose-data-node.yml
@@ -6,6 +6,8 @@
 #       example: export ESGF_HOSTNAME=my.esgf.node
 #       example: export ESGF_HOSTNAME=`docker-machine ip`
 # ESGF_DATA_DIR: root of ESGF data directories
+# ESGF_VERSION: version of ESGF/Docker distribution
+#       example: export ESGF_VERSION=1.0
 
 version: '2'
 
@@ -16,7 +18,7 @@ networks:
 services:
 
   esgf-data-node:
-    image: esgfhub/esgf-data-node
+    image: esgfhub/esgf-data-node:${ESGF_VERSION}
     container_name: data-node
     expose:
       - "8080"
@@ -38,7 +40,7 @@ services:
 
   # data container holding site-specific ESGF configuration
   esgf-config:
-    image: centos:centos6.7
+    image: centos:6
     container_name: esgf-config
     volumes:
      - $ESGF_CONFIG/httpd/certs/:/etc/certs/
@@ -49,7 +51,7 @@ services:
      - $ESGF_CONFIG/esg/config/tomcat/esg-truststore.ts:/usr/java/latest/jre/lib/security/jssecacerts
 
   esgf-postgres:
-     image: esgfhub/esgf-postgres
+     image: esgfhub/esgf-postgres:${ESGF_VERSION}
      expose:
        - "5432"
      ports:
@@ -59,7 +61,7 @@ services:
        - dbnetwork
 
   esgf-httpd:
-   image: esgfhub/esgf-httpd
+   image: esgfhub/esgf-httpd:${ESGF_VERSION}
    container_name: httpd
    entrypoint: /usr/local/bin/docker-entrypoint.sh
    volumes_from:
@@ -76,7 +78,7 @@ services:
 
   # FTP server
   esgf-ftp:
-   image: esgfhub/esgf-vsftp
+   image: esgfhub/esgf-vsftp:${ESGF_VERSION}
    container_name: ftp
    ports:
      - "21:21"
