--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@
 #       example: export ESGF_HOSTNAME=my.esgf.node
 #       example: export ESGF_HOSTNAME=`docker-machine ip`
 # ESGF_DATA_DIR: root of ESGF data directories
+# ESGF_VERSION: version of ESGF/Docker distribution
+#       example: export ESGF_VERSION=1.0
 
 version: '2'
 
@@ -17,7 +19,7 @@ services:
 
   # ESGF Data Node
   esgf-data-node:
-    image: esgfhub/esgf-data-node
+    image: esgfhub/esgf-data-node:${ESGF_VERSION}
     container_name: data-node
     expose:
       - "8080"
@@ -39,7 +41,7 @@ services:
 
   # ESGF Identity Provider
   esgf-idp-node:
-    image: esgfhub/esgf-idp-node
+    image: esgfhub/esgf-idp-node:${ESGF_VERSION}
     container_name: idp-node
     expose:
       - "8080"
@@ -58,7 +60,7 @@ services:
   # data container holding site-specific ESGF configuration
   # this container stops after the volumes are initialized
   esgf-config:
-    image: centos:centos6.7
+    image: centos:6
     container_name: esgf-config
     volumes:
      - $ESGF_CONFIG/httpd/certs/:/etc/certs/
@@ -71,7 +73,7 @@ services:
 
   # Solr engine running within Jetty
   esgf-solr:
-    image: esgfhub/esgf-solr
+    image: esgfhub/esgf-solr:${ESGF_VERSION}
     container_name: solr
     expose:
       - "8983"
@@ -86,7 +88,7 @@ services:
 
   # ESGF Index Node
   esgf-index-node:
-    image: esgfhub/esgf-index-node
+    image: esgfhub/esgf-index-node:${ESGF_VERSION}
     container_name: index-node
     expose:
       - "8080"
@@ -104,7 +106,7 @@ services:
 
   # ESGF postgres database
   esgf-postgres:
-     image: esgfhub/esgf-postgres
+     image: esgfhub/esgf-postgres:${ESGF_VERSION}
      expose:
        - "5432"
      ports:
@@ -118,7 +120,7 @@ services:
   # data container to hold CoG source code and python virtual environment
   # this container stops after the volume 'cog_data' is initialized
   esgf-cog:
-     image: esgfhub/esgf-cog
+     image: esgfhub/esgf-cog:${ESGF_VERSION}
      container_name: cog
      expose:
        - "8000"
@@ -141,7 +143,7 @@ services:
 
 
   esgf-httpd:
-   image: esgfhub/esgf-httpd
+   image: esgfhub/esgf-httpd:${ESGF_VERSION}
    container_name: httpd
    entrypoint: /usr/local/bin/docker-entrypoint.sh
    volumes:
@@ -166,7 +168,7 @@ services:
 
   # FTP server
   esgf-ftp:
-   image: esgfhub/esgf-vsftp
+   image: esgfhub/esgf-vsftp:${ESGF_VERSION}
    container_name: ftp 
    ports:
      - "21:21"
