Adding comment to .env.

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-# default environment values used by ESGF/Docker
+# Default environment values used by ESGF/Docker
+# Note that any value defined in the shell takes precedence over values defined in this file.
+
 ESGF_HOSTNAME=my-node.esgf.org
 ESGF_CONFIG=~/esgf_config
 ESGF_DATA_DIR=/tmp
