--- a/vsftp/conf/vsftpd.conf
+++ b/vsftp/conf/vsftpd.conf
@@ -134,5 +134,13 @@ anon_max_rate=2048000
 # If vsftpd is in standalone mode, this is the maximum number of clients which may be connected from the same source internet address. A client will get an error message if they go over this limit.
 # Default: 0 (unlimited)
 max_per_ip=5
+max_clients=10
 
+# ESGF: enable listing and download
+dirlist_enable=YES
+download_enable=YES
 
+# ESGF: set range for data ports
+pasv_enable=Yes
+pasv_min_port=12020
+pasv_max_port=12025
