--- a/esgf_config/esg/config/esgf.properties
+++ b/esgf_config/esg/config/esgf.properties
@@ -25,6 +25,7 @@ orp.provider.list=/esg/config/esgf_known_providers.xml
 # esg-search
 index.service.app.home=/usr/local/tomcat/webapps/esg-search
 index.service.endpoint=http://my.esgf.node/esg-search/search
+esgf.index.peer=my.esgf.node
 publishing.service.app.home=/usr/local/tomcat/webapps/esg-search
 publishing.service.endpoint=https://my.esgf.node/esg-search/remote/secure/client-cert/hessian/publishingService
 esg.search.solr.local.url=http://esgf-solr:8982/solr
