--- a/esgf_config/httpd/conf/esgf-httpd.conf
+++ b/esgf_config/httpd/conf/esgf-httpd.conf
@@ -80,8 +80,8 @@ WSGISocketPrefix run/wsgi
   ProxyPassReverse /esg-orp       ajp://esgf-data-node:8009/esg-orp
   ProxyPass /esgf-idp     ajp://esgf-idp-node:8009/esgf-idp
   ProxyPassReverse /esgf-idp      ajp://esgf-idp-node:8009/esgf-idp
-  ProxyPass /esg-search   ajp://esg-search:8009/esg-search
-  ProxyPassReverse /esg-search    ajp://esg-search:8009/esg-search
+  ProxyPass /esg-search   ajp://esgf-index-node:8009/esg-search
+  ProxyPassReverse /esg-search    ajp://esgf-index-node:8009/esg-search
   ProxyPass /thredds      ajp://esgf-data-node:8009/thredds
   ProxyPassReverse /thredds       ajp://esgf-data-node:8009/thredds
   # ProxyPass /esgf-dashboard       ajp://localhost:8009/esgf-dashboard
