Working on installing esg-publisher.

--- a/data-node/Dockerfile
+++ b/data-node/Dockerfile
@@ -1,5 +1,6 @@
-# ESGF Data Node:
+# ESGF Data Node: Docker image containing:
 # o TDS customized with ESGF access control filters
+# o ESGF publisher client (which needs access to the TDS file system)
 # o ORP
 
 FROM esgfhub/esgf-tomcat:1.0
@@ -8,6 +9,50 @@ MAINTAINER Luca Cinquini <luca.cinquini@jpl.nasa.gov>
 
 # default ESGF repository
 ARG ESGF_REPO=http://distrib-coffee.ipsl.jussieu.fr/pub/esgf
+
+#============================================
+
+# ESGF publisher client
+
+# install library pre-requisites
+RUN yum -y update; yum -y install libxml2-devel libxslt-devel; yum clean all
+
+# install Anaconda
+ENV CDAT_HOME=/usr/local/conda
+RUN cd /tmp && rm -rf $CDAT_HOME && \
+    wget --no-check-certificate https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh && \
+    bash Miniconda2-latest-Linux-x86_64.sh -b -p $CDAT_HOME
+
+# create CDAT virtual environment with Anaconda
+ENV PATH=${CDAT_HOME}/bin:$PATH
+RUN conda create -y -n esgf-pub -c conda-forge -c uvcdat cdutil
+
+# activate virtual env and fetch some pre-requisites
+RUN source ${CDAT_HOME}/bin/activate esgf-pub && \
+    conda install -y -c conda-forge lxml requests psycopg2 decorator Tempita myproxyclient
+
+# install other python pre-requisites
+RUN source ${CDAT_HOME}/bin/activate esgf-pub && \
+    pip install SQLAlchemy==0.7.10 && \
+    pip install sqlalchemy_migrate && \
+    pip install esgprep
+
+# install ESGF publisher
+# location: /usr/local/conda/lib/python2.7/site-packages/esgcet-3.0.1-py2.7.egg
+ENV ESG_PUBLISHER_VERSION=v3.0.1
+RUN source ${CDAT_HOME}/bin/activate esgf-pub && \
+    cd /tmp && \
+    git clone https://github.com/ESGF/esg-publisher.git && \
+    cd esg-publisher && \
+    git checkout $ESG_PUBLISHER_VERSION && \
+    cd src/python/esgcet && \
+    python setup.py install
+
+# env needed by Python client to trust the data node server certicate
+ENV SSL_CERT_DIR /etc/grid-security/certificates
+ENV ESGINI /esg/config/esgcet/esg.ini
+
+#==========================================================
 
 # ESGF ORP
 RUN mkdir -p /usr/local/tomcat/webapps/esg-orp
@@ -23,7 +68,10 @@ RUN cd /usr/local/tomcat/webapps/esg-orp && \
 # these values are the same for all ESGF nodes
 COPY esgf-orp/conf/esg-orp.properties /usr/local/tomcat/webapps/esg-orp/WEB-INF/classes/esg-orp.properties
 
+#=============================================
+
 # TDS
+
 RUN mkdir -p /usr/local/tomcat/webapps/thredds
 #COPY thredds/thredds.war /usr/local/tomcat/webapps/thredds/thredds.war
 ADD $ESGF_REPO/dist/devel/thredds/5.0/5.0.0/thredds.war /usr/local/tomcat/webapps/thredds/
@@ -33,11 +81,13 @@ RUN cd /usr/local/tomcat/webapps/thredds && \
     chown -R tomcat:tomcat /usr/local/tomcat/webapps/thredds
 
 # TDS configuration root
-RUN mkdir /esg/content/thredds
-VOLUME /esg/content/thredds
+RUN mkdir -p /esg/content/thredds
 
 # TDS memory configuration
 COPY thredds/conf/threddsConfig.xml /esg/content/thredds/threddsConfig.xml
+
+# ESGF root catalog
+COPY thredds/conf/catalog.xml /esg/content/thredds/catalog.xml
 
 # TDS customized applicationContext.xml file with ESGF authorizer
 COPY thredds/conf/applicationContext.xml /usr/local/tomcat/webapps/thredds/WEB-INF/applicationContext.xml
