--- a/esgf_config/esg/config/esgcet/esg.ini
+++ b/esgf_config/esg/config/esgcet/esg.ini
@@ -8,8 +8,8 @@ hessian_service_certfile = %(home)s/.globus/certificate-file
 hessian_service_polling_delay = 3
 hessian_service_polling_iterations = 10
 hessian_service_port = 443
-hessian_service_remote_metadata_url = http://my-node.esgf.org/esgcet/remote/hessian/guest/remoteMetadataService
-hessian_service_url = https://my-node.esgf.org/esg-search/remote/secure/client-cert/hessian/publishingService
+hessian_service_remote_metadata_url = http://my.esgf.node/esgcet/remote/hessian/guest/remoteMetadataService
+hessian_service_url = https://my.esgf.node/esg-search/remote/secure/client-cert/hessian/publishingService
 log_format = %(levelname)-10s %(asctime)s %(message)s
 log_level = WARNING
 offline_lister =
@@ -21,12 +21,12 @@ thredds_dataset_roots =
         test | /esg/data/test
 thredds_aggregation_services =
         OpenDAP | /thredds/dodsC/                 | gridded          | aggregationservice
-        LAS     | http://my-node.esgf.org/las/getUI.do | LASatESGFdataNode | aggregationservice
+        LAS     | http://my.esgf.node/las/getUI.do | LASatESGFdataNode | aggregationservice
 thredds_file_services =
         HTTPServer | /thredds/fileServer/       | HTTPServer    | fileservice
-        GridFTP    | gsiftp://my-node.esgf.org:2811/ | GRIDFTP       | fileservice
+        GridFTP    | gsiftp://my.esgf.node:2811/ | GRIDFTP       | fileservice
         OpenDAP    | /thredds/dodsC/            | OpenDAPServer | fileservice
-thredds_url = http://my-node.esgf.org/thredds/catalog/esgcet
+thredds_url = http://my.esgf.node/thredds/catalog/esgcet
 thredds_username = dnode_user
 thredds_password = changeit
 thredds_authentication_realm = THREDDS Data Server
@@ -35,11 +35,11 @@ thredds_master_catalog_name = Earth System Grid catalog
 thredds_max_catalogs_per_directory = 500
 thredds_offline_services =
 #        SRM | srm://esgf-data-node:6288/srm/v2/server?SFN=/archive.sample.gov | HRMatPCMDI
-thredds_reinit_error_url = https://my-node.esgf.org/thredds/admin/content/logs/catalogInit.log
+thredds_reinit_error_url = https://my.esgf.node/thredds/admin/content/logs/catalogInit.log
 thredds_error_pattern = Catalog init
 thredds_reinit_success_pattern = reinit ok
 thredds_fatal_error_pattern = **Fatal
-thredds_reinit_url = https://my-node.esgf.org/thredds/admin/debug?Catalogs/recheck
+thredds_reinit_url = https://my.esgf.node/thredds/admin/debug?Catalogs/recheck
 thredds_restrict_access = esg-user
 thredds_root = /esg/content/thredds/esgcet
 thredds_root_catalog_name = Earth System Root catalog
