--- a/docker-compose-data-node.yml
+++ b/docker-compose-data-node.yml
@@ -32,6 +32,9 @@ services:
     volumes:
       - tds_data:/esg/content/thredds
       - $ESGF_CONFIG/webapps/thredds/WEB-INF/web.xml:/usr/local/tomcat/webapps/thredds/WEB-INF/web.xml
+      - $ESGF_DATA_DIR:/esg/data
+      - $ESGF_CONFIG/grid-security/certificates/:/etc/grid-security/certificates/
+      - $ESGF_CONFIG/globus/certificate-file:/root/.globus/certificate-file
     volumes_from:
       - esgf-config
     environment:
