Re-instating the TDS test catalog.

--- a/data-node/Dockerfile
+++ b/data-node/Dockerfile
@@ -84,11 +84,11 @@ RUN cd /usr/local/tomcat/webapps/thredds && \
 RUN mkdir -p /esg/content/thredds
 
 # TDS memory configuration
-COPY thredds/conf/threddsConfig.xml /esg/content/thredds/threddsConfig.xml
+COPY thredds/conf/threddsConfig.xml  /esg/content/thredds/threddsConfig.xml
 
-# ESGF root catalog
-COPY thredds/conf/catalog.xml /esg/content/thredds/catalog.xml
-COPY thredds/conf/esgcet/catalog.xml /esg/content/thredds/esgcet/catalog.xml
+# ESGF root catalog - will override TDS startup catalog with test data
+#COPY thredds/conf/catalog.xml /esg/content/thredds/catalog.xml
+#COPY thredds/conf/esgcet/catalog.xml /esg/content/thredds/esgcet/catalog.xml
 
 # TDS customized applicationContext.xml file with ESGF authorizer
 COPY thredds/conf/applicationContext.xml /usr/local/tomcat/webapps/thredds/WEB-INF/applicationContext.xml
