--- a/esgf_config/httpd/conf/esgf-httpd.conf
+++ b/esgf_config/httpd/conf/esgf-httpd.conf
@@ -17,6 +17,7 @@ ServerName my.esgf.node
   RewriteCond %{REQUEST_URI} !^/las(.*)$
   RewriteCond %{REQUEST_URI} !^/solr(.*)$
   RewriteCond %{REQUEST_URI} !^/thredds(.*)$
+  RewriteCond %{REQUEST_URI} !^/esgf-stats-api(.*)$
   RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
 
   SSLProxyEngine On
@@ -32,6 +33,10 @@ ServerName my.esgf.node
   # proxy /thredds requests to Tomcat
   ProxyPass /thredds ajp://esgf-data-node:8009/thredds
   ProxyPassReverse /thredds ajp://esgf-data-node:8009/thredds
+
+  # proxy /esgf-stats-api requests to Tomcat
+  ProxyPass /esgf-stats-api ajp://esgf-data-node:8009/esgf-stats-api
+  ProxyPassReverse /esgf-stats-api ajp://esgf-data-node:8009/esgf-stats-api
 
   # proxy /las requests to Tomcat
   #ProxyPass /las ajp://localhost:8009/las
@@ -84,6 +89,8 @@ WSGISocketPrefix run/wsgi
   ProxyPassReverse /esg-search    ajp://esgf-index-node:8009/esg-search
   ProxyPass /thredds      ajp://esgf-data-node:8009/thredds
   ProxyPassReverse /thredds       ajp://esgf-data-node:8009/thredds
+  ProxyPass /esgf-stats-api       ajp://esgf-data-node:8009/esgf-stats-api
+  ProxyPassReverse /esgf-stats-api  ajp://esgf-data-node:8009/esgf-stats-api
   # ProxyPass /esgf-dashboard       ajp://localhost:8009/esgf-dashboard
   # ProxyPassReverse /esgf-dashboard        ajp://localhost:8009/esgf-dashboard
   # ProxyPass /esgf-desktop ajp://localhost:8009/esgf-desktop
