--- a/esgf_config/esg/config/esgf.properties
+++ b/esgf_config/esg/config/esgf.properties
@@ -33,3 +33,9 @@ esg.search.solr.query.url=http://esgf-solr:8983/solr
 esg.search.solr.publish.url=http://esgf-solr:8984/solr
 # security
 security.authz.service.endpoint=https://my.esgf.node/esg-orp/saml/soap/secure/authorizationService.htm
+# node manager
+esgf.registration_xml.download_url=http://my.esgf.node/esgf-nm/registration.xml
+esgf.registration_xml.path=/usr/local/esgf-dashboard-ip/bin/
+# dashboard
+dashboard.ip.app.home=/usr/local/esgf-dashboard-ip
+dashboard.service.app.home=/usr/local/tomcat/webapps/esgf-dashboard
