--- a/esgf_config/esg/config/esgf.properties
+++ b/esgf_config/esg/config/esgf.properties
@@ -39,3 +39,5 @@ esgf.registration_xml.path=/usr/local/esgf-dashboard-ip/bin/
 # dashboard
 dashboard.ip.app.home=/usr/local/esgf-dashboard-ip
 dashboard.service.app.home=/usr/local/tomcat/webapps/esgf-dashboard
+# node manager
+node.peer.group=esgf-test
