--- a/esgf_config/esg/config/esgf.properties
+++ b/esgf_config/esg/config/esgf.properties
@@ -41,3 +41,5 @@ dashboard.ip.app.home=/usr/local/esgf-dashboard-ip
 dashboard.service.app.home=/usr/local/tomcat/webapps/esgf-dashboard
 # node manager
 node.peer.group=esgf-test
+# short lived certificate server
+esg.security.slcs.endpoint=slcs.ceda.ac.uk
