--- a/esgf_config/esg/config/esgf.properties
+++ b/esgf_config/esg/config/esgf.properties
@@ -1,5 +1,7 @@
 # hostname
 esgf.host=my.esgf.node
+# peer group
+node.peer.group=esgf-test
 # IdP
 idp.security.attribute.service.app.home=/usr/local/tomcat/webapps/esgf-idp
 idp.security.attribute.service.endpoint=https://my.esgf.node/esgf-idp/saml/soap/secure/attributeService.htm
