--- a/esgf_config/httpd/conf/esgf-httpd.conf
+++ b/esgf_config/httpd/conf/esgf-httpd.conf
@@ -98,6 +98,20 @@ WSGISocketPrefix run/wsgi
   # ProxyPass /las  ajp://localhost:8009/las
   # ProxyPassReverse /las   ajp://localhost:8009/las
 
+  # Node Manager
+  WSGIDaemonProcess esgfnm python-path=/opt/esgf/virtual/python/lib/python2.7/site-packages:/usr/local/esgf-node-manager/src/python/server user=apache group=apache threads=5
+  WSGIScriptAlias /esgf-nm /usr/local/esgf-node-manager/src/python/server/nodemgr/apache/wsgi.py
+  <Directory /usr/local/esgf-nodemgr-doc/code/server/nodemgr/apache>
+     Order allow,deny
+     Allow from all
+     AllowOverride None
+  </Directory>
+  <Location /esgf-nm>
+     WSGIProcessGroup esgfnm
+     WSGIApplicationGroup %{GLOBAL}
+  </Location>
+
+  # CoG
   # note: WSGIPythonEggs must match location created by Dockerfile
   WSGIDaemonProcess cog-site python-path=/usr/local/cog/venv/lib/python2.7/site-packages:/usr/local/cog/cog-install python-eggs=/var/www/.python-eggs user=apache group=apache threads=25
   WSGIScriptAlias / /usr/local/cog/cog_install/apache/wsgi.py
