--- a/node-manager/conf/esgf-httpd.conf
+++ b/node-manager/conf/esgf-httpd.conf
@@ -98,16 +98,16 @@ WSGISocketPrefix run/wsgi
   # ProxyPass /las  ajp://localhost:8009/las
   # ProxyPassReverse /las   ajp://localhost:8009/las
 
-  # note: WSGIPythonEggs must match location created by Dockerfile
-  WSGIDaemonProcess cog-site python-path=/usr/local/cog/venv/lib/python2.7/site-packages:/usr/local/cog/cog-install python-eggs=/var/www/.python-eggs user=apache group=apache threads=25
-  WSGIScriptAlias / /usr/local/cog/cog_install/apache/wsgi.py
-  Alias /static/ /usr/local/cog/cog_install/static/
-  <Directory /usr/local/cog/cog_install/static>
-      Options -Indexes
-      Order deny,allow
-      Allow from all
-      AllowOverride None
+  WSGIDaemonProcess esgfnm python-path=/opt/esgf/virtual/python/lib/python2.7/site-packages:/usr/local/esgf-node-manager/src/python/server user=apache group=apache threads=5
+  WSGIScriptAlias /esgf-nm /usr/local/esgf-node-manager/src/python/server/nodemgr/apache/wsgi.py
+  <Directory /usr/local/esgf-nodemgr-doc/code/server/nodemgr/apache>
+     Order allow,deny
+     Allow from all
+     AllowOverride None
   </Directory>
-  WSGIProcessGroup cog-site
+  <Location /esgf-nm>
+     WSGIProcessGroup esgfnm
+     WSGIApplicationGroup %{GLOBAL}
+  </Location>
 
 </VirtualHost>
